tracker: handle storage_port in announce
This will be used later for communicating the port of the storage service running on the nodes.
